test/conformance/chainsaw/reports/admission/update-deployment/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-multiple-replicas
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
