test/conformance/chainsaw/reports/admission/update-deployment/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: nginx-test
results:
- message: 'validation error: rule require-multiple-replicas failed at path /spec/replicas/'
  policy: require-multiple-replicas
  result: warn
  rule: require-multiple-replicas
  source: kyverno
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: nginx-test
summary:
  error: 0
  fail: 0
  pass: 0
  skip: 0
  warn: 1
